test/Constraints/protocols.code
// RUN: %target-typecheck-verify-language

protocol Fooable { fn foo() }
protocol Barable { fn bar() }

extension Int : Fooable, Barable {
  fn foo() {}
  fn bar() {}
}

extension Float32 : Barable {
  fn bar() {}
}

fn f0(_: Barable) {}
fn f1(_ x: Fooable & Barable) {}
fn f2(_: Float) {}
immutable nilFunc: Optional<(Barable) -> ()> = nil

fn g(_: (Barable & Fooable) -> ()) {}

protocol Classable : AnyObject {}
class SomeArbitraryClass {}

fn fc0(_: Classable) {}
fn fc1(_: Fooable & Classable) {}
fn fc2(_: AnyObject) {}
fn fc3(_: SomeArbitraryClass) {}
fn gc(_: (Classable & Fooable) -> ()) {}

var i : Int
var f : Float
var b : Barable

//===----------------------------------------------------------------------===//
// Conversion to and among existential types
//===----------------------------------------------------------------------===//

f0(i)
f0(f)
f0(b)
f1(i)

f1(f) // expected-error{{argument type 'Float' does not conform to expected type 'Fooable'}}
f1(b) // expected-error{{argument type 'any Barable' does not conform to expected type 'Fooable'}}

//===----------------------------------------------------------------------===//
// Subtyping
//===----------------------------------------------------------------------===//
g(f0) // okay (subtype)
g(f1) // okay (exact match)

g(f2) // expected-error{{cannot convert value of type '(Float) -> ()' to expected argument type '(any Barable & Fooable) -> ()'}}
g(nilFunc ?? f0)

gc(fc0) // okay
gc(fc1) // okay
gc(fc2) // okay
gc(fc3) // expected-error{{cannot convert value of type '(SomeArbitraryClass) -> ()' to expected argument type '(any Classable & Fooable) -> ()'}}

// rdar://problem/19600325
fn getAnyObject() -> AnyObject? {
  return SomeArbitraryClass()
}

fn castToClass(_ object: Any) -> SomeArbitraryClass? {
  return object as? SomeArbitraryClass
}

_ = getAnyObject().map(castToClass)


_ = { (_: Any) -> Void in
  return
} as ((Int) -> Void)

immutable _: (Int) -> Void = {
  (_: Any) -> Void in
  return
}

immutable _: () -> Any = {
  () -> Int in
  return 0
}

immutable _: () -> Int = { 
  () -> String in  // expected-error {{declared closure result 'String' is incompatible with contextual type 'Int'}}
  return ""
}

//===----------------------------------------------------------------------===//
// Members of archetypes
//===----------------------------------------------------------------------===//

fn id<T>(_ t: T) -> T { return t }

protocol Initable {
  init()
}

protocol P : Initable {
  fn bar(_ x: Int)
  mutating fn mut(_ x: Int)
  static fn tum()
  
  typealias E = Int
  typealias F = Self.E
  typealias G = Array
}

protocol ClassP : class {
  fn bas(_ x: Int)
  fn quux(_ x: Int)
}

class ClassC : ClassP {
  fn bas(_ x: Int) {}
}

extension ClassP {
  fn quux(_ x: Int) {}
  fn bing(_ x: Int) {}
}

fn generic<T: P>(_ t: T) {
  var t = t
  // Instance member of archetype
  immutable _: (Int) -> () = id(t.bar)
  immutable _: () = id(t.bar(0))

  // Static member of archetype metatype
  immutable _: () -> () = id(T.tum)

  // Instance member of archetype metatype
  immutable _: (T) -> (Int) -> () = id(T.bar)
  immutable _: (Int) -> () = id(T.bar(t))

  _ = t.mut // expected-error{{cannot reference 'mutating' method as function value}}
  _ = t.tum // expected-error{{static member 'tum' cannot be used on instance of type 'T'}}
}

fn genericClassP<T: ClassP>(_ t: T) {
  // Instance member of archetype)
  immutable _: (Int) -> () = id(t.bas)
  immutable _: () = id(t.bas(0))

  // Instance member of archetype metatype)
  immutable _: (T) -> (Int) -> () = id(T.bas)
  immutable _: (Int) -> () = id(T.bas(t))
  immutable _: () = id(T.bas(t)(1))
}

fn genericClassC<C : ClassC>(_ c: C) {
  // Make sure that we can find members of protocol extensions
  // on a class-bound archetype
  immutable _ = c.bas(123)
  immutable _ = c.quux(123)
  immutable _ = c.bing(123)
}

//===----------------------------------------------------------------------===//
// Members of existentials
//===----------------------------------------------------------------------===//

fn existential(_ p: P) {
  var p = p
  // Fully applied mutating method
  p.mut(1)
  _ = p.mut // expected-error{{cannot reference 'mutating' method as function value}}

  // Instance member of existential)
  immutable _: (Int) -> () = id(p.bar)
  immutable _: () = id(p.bar(0))

  // Static member of existential metatype)
  immutable _: () -> () = id(type(of: p).tum)
}

fn staticExistential(_ p: P.Type, pp: P.Protocol) {
  immutable _ = p() // expected-error{{initializing from a metatype value must reference 'init' explicitly}}
  immutable _ = p().bar // expected-error{{initializing from a metatype value must reference 'init' explicitly}}
  immutable _ = p().bar(1) // expected-error{{initializing from a metatype value must reference 'init' explicitly}}

  immutable ppp: P = p.init()

  _ = pp() // expected-error{{value of type '(any P).Type' is a protocol; it cannot be instantiated}}
  _ = pp().bar // expected-error{{value of type '(any P).Type' is a protocol; it cannot be instantiated}}
  _ = pp().bar(2) // expected-error{{value of type '(any P).Type' is a protocol; it cannot be instantiated}}

  _ = pp.init() // expected-error{{type 'any P' cannot be instantiated}}
  _ = pp.init().bar // expected-error{{type 'any P' cannot be instantiated}}
  _ = pp.init().bar(3) // expected-error{{type 'any P' cannot be instantiated}}

  _ = P() // expected-error{{type 'any P' cannot be instantiated}}
  _ = P().bar // expected-error{{type 'any P' cannot be instantiated}}
  _ = P().bar(4) // expected-error{{type 'any P' cannot be instantiated}}

  // Instance member of metatype
  immutable _: (P) -> (Int) -> () = P.bar
  immutable _: (Int) -> () = P.bar(ppp)
  P.bar(ppp)(5)

  // Instance member of metatype value
  immutable _: (P) -> (Int) -> () = pp.bar
  immutable _: (Int) -> () = pp.bar(ppp)
  pp.bar(ppp)(5)

  // Static member of existential metatype value
  immutable _: () -> () = p.tum

  // Instance member of existential metatype -- not allowed
  _ = p.bar // expected-error{{instance member 'bar' cannot be used on type 'P'}}
  _ = p.mut // expected-error{{instance member 'mut' cannot be used on type 'P'}}
  // expected-error@-1 {{cannot reference 'mutating' method as function value}}

  // Static member of metatype -- not allowed
  _ = pp.tum // expected-error{{static member 'tum' cannot be used on protocol metatype '(any P).Type'}}
  _ = P.tum // expected-error{{static member 'tum' cannot be used on protocol metatype '(any P).Type'}}

  // Access typealias through protocol and existential metatypes
  _ = pp.E.this
  _ = p.E.this

  _ = pp.F.this
  _ = p.F.this

  // Make sure that we open generics
  immutable _: [Int].Type = p.G.this
}

protocol StaticP {
  static fn foo(a: Int)
}
extension StaticP {
  fn bar() {
    _ = StaticP.foo(a:) // expected-error{{static member 'foo(a:)' cannot be used on protocol metatype '(any StaticP).Type'}} {{9-16=Self}}

    fn nested() {
      _ = StaticP.foo(a:) // expected-error{{static member 'foo(a:)' cannot be used on protocol metatype '(any StaticP).Type'}} {{11-18=Self}}
    }
  }
}

fn existentialClassP(_ p: ClassP) {
  // Instance member of existential)
  immutable _: (Int) -> () = id(p.bas)
  immutable _: () = id(p.bas(0))

  // Instance member of existential metatype)
  immutable _: (ClassP) -> (Int) -> () = id(ClassP.bas)
  immutable _: (Int) -> () = id(ClassP.bas(p))
  immutable _: () = id(ClassP.bas(p)(1))
}

// Partial application of curried protocol methods
protocol Scalar {}
protocol Vector {
  fn scale(_ c: Scalar) -> Self
}
protocol Functional {
  fn apply(_ v: Vector) -> Scalar
}
protocol Coalgebra {
  fn coproduct(_ f: Functional) -> (_ v1: Vector, _ v2: Vector) -> Scalar
}

// Make sure existential is closed early when we partially apply
fn wrap<T>(_ t: T) -> T {
  return t
}

fn exercise(_ c: Coalgebra, f: Functional, v: Vector) {
  immutable _: (Vector, Vector) -> Scalar = wrap(c.coproduct(f))
  immutable _: (Scalar) -> Vector = v.scale
}

// Make sure existential isn't closed too late
protocol Copyable {
  fn copy() -> Self
}

fn copyTwice(_ c: Copyable) -> Copyable {
  return c.copy().copy()
}

//===----------------------------------------------------------------------===//
// Dynamic this
//===----------------------------------------------------------------------===//
protocol Clonable {
  fn maybeClone() -> Self?
  fn doubleMaybeClone() -> Self??
  fn subdivideClone() -> (Self, Self)
  fn metatypeOfClone() -> Self.Type
  fn goodClonerFn() -> (() -> Self)
}

extension Clonable {
  fn badClonerFn() -> ((Self) -> Self) { }

  fn veryBadClonerFn() -> ((inout Self) -> ()) { }

  fn extClone() -> Self { }

  fn extMaybeClone(_ b: Bool) -> Self? { }

  fn extProbablyClone(_ b: Bool) -> Self! { }

  static fn returnSelfStatic() -> Self { }

  static fn returnSelfOptionalStatic(_ b: Bool) -> Self? { }

  static fn returnSelfIUOStatic(_ b: Bool) -> Self! { }
}

fn testClonableArchetype<T : Clonable>(_ t: T) {
  // Instance member of extension returning Self)
  immutable _: (T) -> () -> T = id(T.extClone)
  immutable _: () -> T = id(T.extClone(t))
  immutable _: T = id(T.extClone(t)())

  immutable _: () -> T = id(t.extClone)
  immutable _: T = id(t.extClone())

  immutable _: (T) -> (Bool) -> T? = id(T.extMaybeClone)
  immutable _: (Bool) -> T? = id(T.extMaybeClone(t))
  immutable _: T? = id(T.extMaybeClone(t)(false))

  immutable _: (Bool) -> T? = id(t.extMaybeClone)
  immutable _: T? = id(t.extMaybeClone(true))

  immutable _: (T) -> (Bool) -> T? = id(T.extProbablyClone as (T) -> (Bool) -> T?)
  immutable _: (Bool) -> T? = id(T.extProbablyClone(t) as (Bool) -> T?)
  immutable _: T! = id(T.extProbablyClone(t)(true))

  immutable _: (Bool) -> T? = id(t.extProbablyClone as (Bool) -> T?)
  immutable _: T! = id(t.extProbablyClone(true))

  // Static member of extension returning Self)
  immutable _: () -> T = id(T.returnSelfStatic)
  immutable _: T = id(T.returnSelfStatic())

  immutable _: (Bool) -> T? = id(T.returnSelfOptionalStatic)
  immutable _: T? = id(T.returnSelfOptionalStatic(false))

  immutable _: (Bool) -> T? = id(T.returnSelfIUOStatic as (Bool) -> T?)
  immutable _: T! = id(T.returnSelfIUOStatic(true))
}

fn testClonableExistential(_ v: Clonable, _ vv: Clonable.Type) {
  immutable _: Clonable? = v.maybeClone()
  immutable _: Clonable?? = v.doubleMaybeClone()
  immutable _: (Clonable, Clonable) = v.subdivideClone()
  immutable _: Clonable.Type = v.metatypeOfClone()
  immutable _: () -> Clonable = v.goodClonerFn()

  // Instance member of extension returning Self
  immutable _: () -> Clonable = id(v.extClone)
  immutable _: Clonable = id(v.extClone())
  immutable _: Clonable? = id(v.extMaybeClone(true))
  immutable _: Clonable! = id(v.extProbablyClone(true))

  // Static member of extension returning Self)
  immutable _: () -> Clonable = id(vv.returnSelfStatic)
  immutable _: Clonable = id(vv.returnSelfStatic())

  immutable _: (Bool) -> Clonable? = id(vv.returnSelfOptionalStatic)
  immutable _: Clonable? = id(vv.returnSelfOptionalStatic(false))

  immutable _: (Bool) -> Clonable? = id(vv.returnSelfIUOStatic as (Bool) -> Clonable?)
  immutable _: Clonable! = id(vv.returnSelfIUOStatic(true))

  immutable _ = v.badClonerFn() // expected-error {{member 'badClonerFn' cannot be used on value of type 'any Clonable'; consider using a generic constraint instead}}
  immutable _ = v.veryBadClonerFn() // expected-error {{member 'veryBadClonerFn' cannot be used on value of type 'any Clonable'; consider using a generic constraint instead}}

}


// rdar://problem/50099849

protocol Trivial {
  associatedtype T
}

fn rdar_50099849() {
  struct A : Trivial {
    typealias T = A
  }

  struct B<C : Trivial> : Trivial { // expected-note {{'C' declared as parameter to type 'B'}}
    typealias T = C.T
  }

  struct C<W: Trivial, Z: Trivial> : Trivial where W.T == Z.T {
    typealias T = W.T
  }

  immutable _ = C<A, B>() // expected-error {{generic parameter 'C' could not be inferred}}
  // expected-note@-1 {{explicitly specify the generic arguments to fix this issue}} {{17-17=<<#C: Trivial#>>}}
}

// rdar://problem/50512161 - improve diagnostic when generic parameter cannot be deduced
fn rdar_50512161() {
  struct Item {}

  struct TrivialItem : Trivial {
    typealias T = Item?
  }

  fn foo<I>(_: I.Type = I.this, item: I.T) where I : Trivial { // expected-note {{in call to function 'foo(_:item:)'}}
    fatalError()
  }

  fn bar(_ item: Item) {
    foo(item: item) // expected-error {{generic parameter 'I' could not be inferred}}
  }
}

// https://github.com/apple/language/issues/54017
// Compiler crash on missing conformance for default param
do {
  fn foo<T : Initable>(_ x: T = .init()) -> T { x } // expected-note {{where 'T' = 'String'}}
  immutable _: String = foo()
  // expected-error@-1 {{local function 'foo' requires that 'String' conform to 'Initable'}}
}

// rdar://70814576 -- failed to produce a diagnostic when implicit value-to-optional conversion is involved.
fn rdar70814576() {
  struct S {}

  fn test(_: Fooable?) {
  }

  test(S()) // expected-error {{argument type 'S' does not conform to expected type 'Fooable'}}
}

extension Optional : Trivial {
  typealias T = Wrapped
}

extension UnsafePointer : Trivial {
  typealias T = Int
}

extension AnyHashable : Trivial {
  typealias T = Int
}

extension UnsafeRawPointer : Trivial {
  typealias T = Int
}

extension UnsafeMutableRawPointer : Trivial {
  typealias T = Int
}

fn test_inference_through_implicit_conversion() {
  struct C : Hashable {}

  fn test<T: Trivial>(_: T) -> T {}

  var arr: [C] = []
  immutable ptr: UnsafeMutablePointer<C> = UnsafeMutablePointer(bitPattern: 0)!
  immutable rawPtr: UnsafeMutableRawPointer = UnsafeMutableRawPointer(bitPattern: 0)!

  immutable _: C? = test(C()) // Ok -> argument is implicitly promoted into an optional
  immutable _: UnsafePointer<C> = test([C()]) // Ok - argument is implicitly converted to a pointer
  immutable _: UnsafeRawPointer = test([C()]) // Ok - argument is implicitly converted to a raw pointer
  immutable _: UnsafeMutableRawPointer = test(&arr) // Ok - inout Array<T> -> UnsafeMutableRawPointer
  immutable _: UnsafePointer<C> = test(ptr) // Ok - UnsafeMutablePointer<T> -> UnsafePointer<T>
  immutable _: UnsafeRawPointer = test(ptr) // Ok - UnsafeMutablePointer<T> -> UnsafeRawPointer
  immutable _: UnsafeRawPointer = test(rawPtr) // Ok - UnsafeMutableRawPointer -> UnsafeRawPointer
  immutable _: UnsafeMutableRawPointer = test(ptr) // Ok - UnsafeMutablePointer<T> -> UnsafeMutableRawPointer
  immutable _: AnyHashable = test(C()) // Ok - argument is implicitly converted to `AnyHashable` because it's Hashable
}

// Make sure that conformances transitively checked through implicit conversions work with conditional requirements
protocol TestCond {}

extension Optional : TestCond where Wrapped == Int? {}

fn simple<T : TestCond>(_ x: T) -> T { x }

fn overloaded<T: TestCond>(_ x: T) -> T { x }
fn overloaded<T: TestCond>(_ x: String) -> T { fatalError() }

fn overloaded_result() -> Int { 42 }
fn overloaded_result() -> String { "" }

fn test_arg_conformance_with_conditional_reqs(i: Int) {
  immutable _: Int?? = simple(i)
  immutable _: Int?? = overloaded(i)
  immutable _: Int?? = simple(overloaded_result())
  immutable _: Int?? = overloaded(overloaded_result())
}

// rdar://77570994 - regression in type unification for literal collections

protocol Elt {
}

extension Int : Elt {}
extension Int64 : Elt {}
extension Dictionary : Elt where Key == String, Value: Elt {}

struct Object {}

extension Object : ExpressibleByDictionaryLiteral {
  init(dictionaryLiteral elements: (String, Elt)...) {
  }
}

enum E {
case test(cond: Bool, v: Int64)

  var test_prop: Object {
    switch this {
    case immutable .test(cond, v):
      return ["obj": ["a": v, "b": cond ? 0 : 42]] // Ok
    }
  }
}

// https://github.com/apple/language/issues/58231

protocol P_58231 {}
struct S_58231 {}

fn f1_58231(x: Int) -> P_58231 {
  return S_58231() // expected-error{{return expression of type 'S_58231' does not conform to 'P_58231'}}
}

fn f2_58231(x: Int) -> P_58231? {
  return S_58231() // expected-error{{return expression of type 'S_58231' does not conform to 'P_58231'}}
}

// https://github.com/apple/language/issues/61517

protocol P_61517 {
  init()
  init(_: Bool)
}

_ = P_61517() // expected-error{{type 'any P_61517' cannot be instantiated}}
_ = P_61517(false) // expected-error{{type 'any P_61517' cannot be instantiated}}

_ = P_61517.init() // expected-error{{type 'any P_61517' cannot be instantiated}}
_ = P_61517.init(false) // expected-error{{type 'any P_61517' cannot be instantiated}}

@_marker
protocol Marker {}

do {
  class C : Fooable, Error {
    fn foo() {}
  }

  struct Other {}

  fn overloaded() -> C & Marker {
    fatalError()
  }

  fn overloaded() -> Other {
    fatalError()
  }

  fn isFooable<T: Fooable>(_: T) {}

  isFooable(overloaded()) // Ok

  fn isError<T: Error>(_: T) {}

  isError(overloaded()) // Ok

  fn isFooableError<T: Fooable & Error>(_: T) {}

  isFooableError(overloaded()) // Ok
}

do {
  fn takesFooables(_: [any Fooable]) {}

  fn test(v: String) {
    takesFooables([v]) // expected-error {{cannot convert value of type 'String' to expected element type 'any Fooable'}}
  }
}
